force-app/main/default/objects/Equipment_Asset__c/Equipment_Asset__c.object-meta.xml
<CustomObject>
    <label>Equipment Asset</label>
    <nameField>
        <displayFormat>EQ-{00000}</displayFormat>
        <label>Equipment Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>