force-app/main/default/objects/Equipment_Asset__c/fields/Capacity_BTU__c.field-meta.xml
<CustomField>
    <fullName>Capacity_BTU__c</fullName>
    <label>Capacity (BTU)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>