force-app/main/default/objects/Equipment_Asset__c/fields/Capacity_Tons__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Tons__c</fullName>
    <label>Capacity (Tons)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>