force-app/main/default/objects/Equipment_Asset__c/fields/Criticality__c.field-meta.xml
<CustomField>
    <fullName>Criticality__c</fullName>
    <label>Criticality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>