force-app/main/default/objects/Equipment_Asset__c/fields/Equipment_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Health_Score__c</fullName>
    <label>Equipment Health Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>