force-app/main/default/objects/Equipment_Asset__c/fields/Equipment_Status__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Status__c</fullName>
    <label>Equipment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Under Repair</fullName>
            </value>
            <value>
                <fullName>Standby</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>