force-app/main/default/objects/Equipment_Asset__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rooftop Unit (RTU)</fullName>
            </value>
            <value>
                <fullName>Chiller</fullName>
            </value>
            <value>
                <fullName>Boiler</fullName>
            </value>
            <value>
                <fullName>Air Handler (AHU)</fullName>
            </value>
            <value>
                <fullName>VAV Box</fullName>
            </value>
            <value>
                <fullName>Cooling Tower</fullName>
            </value>
            <value>
                <fullName>Heat Pump</fullName>
            </value>
            <value>
                <fullName>Building Automation Controller</fullName>
            </value>
            <value>
                <fullName>Pump</fullName>
            </value>
            <value>
                <fullName>Fan/Exhaust</fullName>
            </value>
            <value>
                <fullName>Split System</fullName>
            </value>
            <value>
                <fullName>Package Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>