force-app/main/default/objects/Equipment_Asset__c/fields/Expected_End_of_Life__c.field-meta.xml
<CustomField>
    <fullName>Expected_End_of_Life__c</fullName>
    <label>Expected End of Life</label>
    <type>Date</type>
</CustomField>