force-app/main/default/objects/Equipment_Asset__c/fields/External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>External_System_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External System ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>