force-app/main/default/objects/Equipment_Asset__c/fields/Last_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Date__c</fullName>
    <label>Last Service Date</label>
    <type>Date</type>
</CustomField>