force-app/main/default/objects/Equipment_Asset__c/fields/Location_Within_Site__c.field-meta.xml
<CustomField>
    <fullName>Location_Within_Site__c</fullName>
    <label>Location Within Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>