force-app/main/default/objects/Equipment_Asset__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Trane</fullName>
            </value>
            <value>
                <fullName>York</fullName>
            </value>
            <value>
                <fullName>Daikin</fullName>
            </value>
            <value>
                <fullName>Lennox</fullName>
            </value>
            <value>
                <fullName>Mitsubishi</fullName>
            </value>
            <value>
                <fullName>Honeywell</fullName>
            </value>
            <value>
                <fullName>Johnson Controls</fullName>
            </value>
            <value>
                <fullName>Siemens</fullName>
            </value>
            <value>
                <fullName>Bosch</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>