force-app/main/default/objects/Equipment_Asset__c/fields/Next_Scheduled_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Scheduled_Service_Date__c</fullName>
    <label>Next Scheduled Service Date</label>
    <type>Date</type>
</CustomField>