force-app/main/default/objects/Equipment_Asset__c/fields/Refrigerant_Type__c.field-meta.xml
<CustomField>
    <fullName>Refrigerant_Type__c</fullName>
    <label>Refrigerant Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>R-410A</fullName>
            </value>
            <value>
                <fullName>R-454B</fullName>
            </value>
            <value>
                <fullName>R-32</fullName>
            </value>
            <value>
                <fullName>R-22</fullName>
            </value>
            <value>
                <fullName>R-134a</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>