force-app/main/default/objects/Equipment_Asset__c/fields/Runtime_Hours__c.field-meta.xml
<CustomField>
    <fullName>Runtime_Hours__c</fullName>
    <label>Runtime Hours</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>