force-app/main/default/objects/Equipment_Asset__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Equipment Assets</relationshipLabel>
    <relationshipName>Equipment_Assets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>