force-app/main/default/objects/Equipment_Asset__c/fields/Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_End_Date__c</fullName>
    <label>Warranty End Date</label>
    <type>Date</type>
</CustomField>